# prime-counter

./: CMakeLists.txt  README.md  bitarray.hpp  main.cpp  naive.cpp  naive.hpp  opti_for_2.cpp  prime_counter.hpp  result.hpp  sieve_12k_11.cpp  sieve_12k_7.cpp  sieve_4k_1.cpp  sieve_impl.hpp  sieve_of_atkin.cpp  sieve_of_atkin_interval.cpp  utils.cpp  utils.hpp
